feat: complete pagination categories & searching category_name
